plot stars at 3x res obtained with 350 SED bins

--- a/improve_SEDs/notebooks/SED_errors.ipynb
+++ b/improve_SEDs/notebooks/SED_errors.ipynb
@@ -222,12 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "for psf_, star_name in zip(poly_psf_list,SED_name):\n",
-    "    fig = plt.figure(figsize=(8,8), facecolor='white')\n",
+    "    fig = plt.figure(figsize=(5,5), facecolor='white')\n",
     "    plt.imshow(psf_,cmap='gist_stern', vmax=vmax, vmin=0)\n",
     "    plt.title('Poly PSF for star : '+ star_name)\n",
     "    plt.savefig(plots_folder+'poly_psf_'+star_name+'.jpg')\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -257,43 +257,69 @@
        "<input type=\"radio\" name=\"images\" onclick=\"show12();\">M0V</input>\n",
        "<input type=\"radio\" name=\"images\" onclick=\"show13();\">M5V</input>\n",
        "<div id=\"image1\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_O5V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_O5V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image2\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_B0V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_B0V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image3\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_B5-7V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_B5-7V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image4\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_A0V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_A0V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image5\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_A5V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_A5V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image6\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_F0V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_F0V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image7\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_F5V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_F5V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image8\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_G0V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_G0V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image9\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_G5V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_G5V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image10\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_K0V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_K0V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image11\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_K5V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_K5V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image12\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_M0V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_M0V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<div id=\"image13\">\n",
-       "  <img src=\"./../outputs/plots/poly_psf_M5V.jpg\">\n",
+       "  <img src=\"./../outputs/plots/poly_psf_M5V.jpg\"\n",
+       "  width=\"300\"\n",
+       "  height=\"300\" >\n",
        "</div>\n",
        "<script>\n",
        "function show1(){\n",
@@ -504,7 +530,7 @@
    ],
    "source": [
     "button_str = '<input type=\"radio\" name=\"images\" onclick=\"show{}();\">{}</input>\\n'\n",
-    "image_str = '<div id=\"image{}\">\\n  <img src=\"./../outputs/plots/poly_psf_{}.jpg\">\\n</div>\\n'\n",
+    "image_str = '<div id=\"image{}\">\\n  <img src=\"./../outputs/plots/poly_psf_{}.jpg\"\\n  width=\"300\"\\n  height=\"300\" >\\n</div>\\n'\n",
     "display_str = '  document.getElementById(\\'image{}\\').style.display =\\'{}\\';\\n'\n",
     "\n",
     "html = 'Select an Image:\\n'\n",
