--- a/WFE_sampling_test/notebooks/multi_wfe_train.ipynb
+++ b/WFE_sampling_test/notebooks/multi_wfe_train.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +164,8 @@
     "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
     "\n",
     "fig.legend(loc=(0.3,0.7))\n",
+    "\n",
+    "plt.savefig('../figures/multires_model_error_vs_time.pdf')\n",
     "\n",
     "plt.show()\n"
    ]
