Interpolate SEDs and save the datasets.

--- a/interp_SED_model/notebooks/save_interp_SED_datasets.ipynb
+++ b/interp_SED_model/notebooks/save_interp_SED_datasets.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import wf_psf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +102,7 @@
     }
    ],
    "source": [
+    "# Display some PSFs\n",
     "\n",
     "display_star = 4\n",
     "\n",
@@ -124,6 +127,143 @@
     "\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate SEDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "d_max = 2\n",
+    "max_order = 45\n",
+    "x_lims = [0, 1e3]\n",
+    "y_lims = [0, 1e3]\n",
+    "grid_points = [4, 4]\n",
+    "n_bins = 8\n",
+    "auto_init = True\n",
+    "verbose = True\n",
+    "\n",
+    "oversampling_rate = 3.\n",
+    "output_Q = 3.\n",
+    "\n",
+    "max_wfe_rms = 0.1\n",
+    "output_dim = 32\n",
+    "LP_filter_length = 2\n",
+    "euclid_obsc = True\n",
+    "\n",
+    "pupil_diameter = 256\n",
+    "\n",
+    "# Super resolved PSFs\n",
+    "super_out_Q = 1\n",
+    "super_out_res = 64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate Zernike maps\n",
+    "zernikes = wf_psf.utils.zernike_generator(n_zernikes=max_order, wfe_dim=pupil_diameter)\n",
+    "\n",
+    "# Initialize PSF simulator\n",
+    "sim_PSF_toolkit = wf_psf.SimPSFToolkit(\n",
+    "    zernikes, max_order=max_order, max_wfe_rms=max_wfe_rms, oversampling_rate=oversampling_rate,\n",
+    "    output_Q=super_out_Q, output_dim=super_out_res, pupil_diameter=pupil_diameter, euclid_obsc=euclid_obsc,\n",
+    "    LP_filter_length=LP_filter_length)\n",
+    "\n",
+    "# Initialize PSF field\n",
+    "gen_poly_fieldPSF = wf_psf.GenPolyFieldPSF(sim_PSF_toolkit, d_max=d_max,\n",
+    "                                    grid_points=grid_points, max_order=max_order,\n",
+    "                                    x_lims=x_lims, y_lims=y_lims, n_bins=n_bins,\n",
+    "                                    lim_max_wfe_rms=max_wfe_rms, verbose=verbose)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate binned and interpolated SEDs for training and testing\n",
+    "\n",
+    "SED_8_train_list = [gen_poly_fieldPSF.sim_psf_toolkit.filter_SED(star_SED,8) for star_SED in train_dataset['SEDs']]\n",
+    "SED_16_train_list = [gen_poly_fieldPSF.sim_psf_toolkit.interp_SED(star_SED, 1, 8) for star_SED in SED_8_train_list ]\n",
+    "SED_32_train_list = [gen_poly_fieldPSF.sim_psf_toolkit.interp_SED(star_SED, 3, 8) for star_SED in SED_8_train_list ]\n",
+    "\n",
+    "SED_8_test_list = [gen_poly_fieldPSF.sim_psf_toolkit.filter_SED(star_SED,8) for star_SED in test_dataset['SEDs']]\n",
+    "SED_16_test_list = [gen_poly_fieldPSF.sim_psf_toolkit.interp_SED(star_SED, 1, 8) for star_SED in SED_8_test_list ]\n",
+    "SED_32_test_list = [gen_poly_fieldPSF.sim_psf_toolkit.interp_SED(star_SED, 3, 8) for star_SED in SED_8_test_list ]\n",
+    "\n",
+    "SED_8_train = np.stack(SED_8_train_list)\n",
+    "SED_16_train = np.stack(SED_16_train_list)\n",
+    "SED_32_train = np.stack(SED_32_train_list)\n",
+    "\n",
+    "SED_8_test = np.stack(SED_8_test_list)\n",
+    "SED_16_test = np.stack(SED_16_test_list)\n",
+    "SED_32_test = np.stack(SED_32_test_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the noisless datasets\n",
+    "\n",
+    "# 8 bins\n",
+    "train_dataset['SEDs'] = SED_8_train \n",
+    "test_dataset['SEDs'] = SED_8_test\n",
+    "np.save(dataset_path+'train_Euclid_res_2000_TrainStars_id_009_8_bins_sigma_0.npy', train_dataset, allow_pickle=True)\n",
+    "np.save(dataset_path+'test_Euclid_res_id_009_8_bins.npy', test_dataset, allow_pickle=True)\n",
+    "\n",
+    "# 16 bins\n",
+    "train_dataset['SEDs'] = SED_16_train \n",
+    "test_dataset['SEDs'] = SED_16_test\n",
+    "np.save(dataset_path+'train_Euclid_res_2000_TrainStars_id_009_16_bins_sigma_0.npy', train_dataset, allow_pickle=True)\n",
+    "np.save(dataset_path+'test_Euclid_res_id_009_16_bins.npy', test_dataset, allow_pickle=True)\n",
+    "\n",
+    "# 32 bins\n",
+    "train_dataset['SEDs'] = SED_32_train \n",
+    "test_dataset['SEDs'] = SED_32_test\n",
+    "np.save(dataset_path+'train_Euclid_res_2000_TrainStars_id_009_32_bins_sigma_0.npy', train_dataset, allow_pickle=True)\n",
+    "np.save(dataset_path+'test_Euclid_res_id_009_32_bins.npy', test_dataset, allow_pickle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add noise to the 8 bin SED\n",
+    "sigma_list = [0.005, 0.01, 0.02]\n",
+    "\n",
+    "for sigma in sigma_list:\n",
+    "    # Load the 8 bin dataset add noise and save it\n",
+    "    train_dataset = np.load(dataset_path+'train_Euclid_res_2000_TrainStars_id_009_8_bins_sigma_0.npy', allow_pickle=True)[()]\n",
+    "    train_dataset['SEDs'][:,:,1] += np.multiply(train_dataset['SEDs'][:,:,1], gen_poly_fieldPSF.sim_psf_toolkit.SED_gen_noise(train_dataset['SEDs'].shape[:2], sigma))\n",
+    "    np.save(dataset_path+'train_Euclid_res_2000_TrainStars_id_009_8_bins_sigma_{}.npy'.format(sigma), train_dataset, allow_pickle=True)\n",
+    "    # Interpolate from the noisy 8 bin dataset\n",
+    "    SED_16_train = np.stack([gen_poly_fieldPSF.sim_psf_toolkit.interp_SED(star_SED, 1, 8) for star_SED in train_dataset['SEDs']])\n",
+    "    SED_32_train = np.stack([gen_poly_fieldPSF.sim_psf_toolkit.interp_SED(star_SED, 3, 8) for star_SED in train_dataset['SEDs']])\n",
+    "    # Save interpolated SEDs data\n",
+    "    train_dataset['SEDs'] = SED_16_train \n",
+    "    np.save(dataset_path+'train_Euclid_res_2000_TrainStars_id_009_16_bins_sigma_{}.npy'.format(sigma), train_dataset, allow_pickle=True)\n",
+    "    train_dataset['SEDs'] = SED_32_train \n",
+    "    np.save(dataset_path+'train_Euclid_res_2000_TrainStars_id_009_32_bins_sigma_{}.npy'.format(sigma), train_dataset, allow_pickle=True)\n",
+    "\n"
    ]
   },
   {
