Analyse results for the projected learning experiences.

--- a/projected_learning/notebooks/analyse_WFE.ipynb
+++ b/projected_learning/notebooks/analyse_WFE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,6 +457,35 @@
     "print('n cycles | project | d_max param |      SR RMSE\\n')\n",
     "for idx, dataset in enumerate(dataset_list):\n",
     "    print('%s cycles - %s - d_max=%s' % dataset, ' ---> ', metrics_dict_list[2][idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_2cycles =  np.load('../wf-outputs/metrics/metrics-poly_2_cycles_256_check_no_proj_d2.npy', allow_pickle=True)[()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['test_metrics', 'train_metrics'])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_2cycles"
    ]
   },
   {
