analyse results with linearly decreasing learning rates.

--- a/projected_learning/notebooks/analyse_WFE_llr.ipynb
+++ b/projected_learning/notebooks/analyse_WFE_llr.ipynb
@@ -422,9 +422,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'wf_script_utils' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ec270266/Desktop/Stage-CEA/wf-SEDs/projected_learning/notebooks/analyse_WFE_llr.ipynb Cell 21\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ec270266/Desktop/Stage-CEA/wf-SEDs/projected_learning/notebooks/analyse_WFE_llr.ipynb#ch0000020?line=0'>1</a>\u001b[0m metrics_dict_list \u001b[39m=\u001b[39m wf_script_utils\u001b[39m.\u001b[39mextract_shape_pix_results([np\u001b[39m.\u001b[39mload(metrics_file \u001b[39m%\u001b[39m dataset, allow_pickle\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)[()] \u001b[39mfor\u001b[39;00m dataset \u001b[39min\u001b[39;00m dataset_list ])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'wf_script_utils' is not defined"
+     ]
+    }
+   ],
    "source": [
     "metrics_dict_list = wf_script_utils.extract_shape_pix_results([np.load(metrics_file % dataset, allow_pickle=True)[()] for dataset in dataset_list ])"
    ]
