Generate some figures, plots and tables.

--- a/HD_projected_optimisation/notebooks/evaluate_HD_projected_optimisation.ipynb
+++ b/HD_projected_optimisation/notebooks/evaluate_HD_projected_optimisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "metrics_mean = np.mean(metrics_dict_list_np,axis=0)\n",
     "metrics_median = np.median(metrics_dict_list_np,axis=0)\n",
     "metrics_std = np.std(metrics_dict_list_np, axis=0)\n",
-    "\n"
+    "metrics_best = np.min(metrics_dict_list_np[:,2,:], axis=0)\n"
    ]
   },
   {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -120,21 +120,21 @@
      "text": [
       "n cycles | project | d_max param | n_zernikes   mean SR RMSE\n",
       "\n",
-      "2 cycles - no_proj - d_max=2 - 45z  --->  2.5095653161406517  +/-  0.843432207349185\n",
-      "2 cycles - no_proj - d_max=2 - 60z  --->  2.673838548362255  +/-  0.9607127966411424\n",
-      "5 cycles - no_proj - d_max=2 - 45z  --->  3.655898980796337  +/-  0.9367677950643569\n",
-      "5 cycles -    proj - d_max=2 - 45z  --->  2.632117308676243  +/-  0.5427799055604208\n",
-      "5 cycles -    proj - d_max=2 - 60z  --->  2.7086594328284264  +/-  0.818275761321406\n",
-      "5 cycles -    proj - d_max=5 - 45z  --->  4.2982543259859085  +/-  0.3727477067059895\n",
-      "9 cycles - no_proj - d_max=2 - 45z  --->  4.28766630589962  +/-  0.5112127721789963\n",
-      "9 cycles -    proj - d_max=2 - 45z  --->  4.0511442720890045  +/-  0.8070779865104847\n"
+      "2 cycles - no_proj - d_max=2 - 45z  --->  2.5095653161406517  +/-  0.843432207349185  |  1.8789872527122498\n",
+      "2 cycles - no_proj - d_max=2 - 60z  --->  2.673838548362255  +/-  0.9607127966411424  |  1.9220437854528427\n",
+      "5 cycles - no_proj - d_max=2 - 45z  --->  3.655898980796337  +/-  0.9367677950643569  |  2.418283000588417\n",
+      "5 cycles -    proj - d_max=2 - 45z  --->  2.632117308676243  +/-  0.5427799055604208  |  1.9815316423773766\n",
+      "5 cycles -    proj - d_max=2 - 60z  --->  2.7086594328284264  +/-  0.818275761321406  |  1.9533846527338028\n",
+      "5 cycles -    proj - d_max=5 - 45z  --->  4.2982543259859085  +/-  0.3727477067059895  |  3.742995858192444\n",
+      "9 cycles - no_proj - d_max=2 - 45z  --->  4.28766630589962  +/-  0.5112127721789963  |  3.3537711948156357\n",
+      "9 cycles -    proj - d_max=2 - 45z  --->  4.0511442720890045  +/-  0.8070779865104847  |  2.5172319263219833\n"
      ]
     }
    ],
    "source": [
     "print('n cycles | project | d_max param | n_zernikes   mean SR RMSE\\n')\n",
     "for idx, dataset in enumerate(dataset_list):\n",
-    "    print('%s cycles - %7s - d_max=%s - %sz' % dataset, ' ---> ', metrics_mean[2][idx], ' +/- ', metrics_std[2][idx])"
+    "    print('%s cycles - %7s - d_max=%s - %sz' % dataset, ' ---> ', metrics_mean[2][idx], ' +/- ', metrics_std[2][idx],' | ' ,metrics_best[idx])"
    ]
   },
   {
