--- a/interp_SED_model/notebooks/interp_model_results.ipynb
+++ b/interp_SED_model/notebooks/interp_model_results.ipynb
@@ -408,7 +408,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -422,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.12"
   },
   "varInspector": {
    "cols": {
