Update notebooks wf-study. No last version

--- a/model_WFE_size/notebooks/eval-models.ipynb
+++ b/model_WFE_size/notebooks/eval-models.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "875aa837",
+   "id": "7ab5ba7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "98291ad5",
+   "id": "c208e41d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d3460da1",
+   "id": "c4186440",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "620efcb4",
+   "id": "7c550d65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844a2d66",
+   "id": "f62d606e",
    "metadata": {},
    "source": [
     "## Base error resolution x1"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fa893e54",
+   "id": "0fdaa0a1",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da13758a",
+   "id": "8c9dce36",
    "metadata": {},
    "source": [
     "## Base error resolution x3"
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8a1ddb1c",
+   "id": "79cb9be6",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "834b7784",
+   "id": "d1f40fe8",
    "metadata": {},
    "source": [
     "## Generate x3 reconstructions"
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "18092758",
+   "id": "0c491b54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c1e331d2",
+   "id": "606eae09",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "08eeed02",
+   "id": "95169b8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c276dd",
+   "id": "c61afd24",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62b167e9",
+   "id": "c95ea56e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96094a13",
+   "id": "37560697",
    "metadata": {},
    "source": [
     "# Evaluate the results"
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3be05a95",
+   "id": "03684132",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "281765b2",
+   "id": "e7a3dfef",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "9a03997d",
+   "id": "ec2fe44e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "bf17e83c",
+   "id": "a7b43bf3",
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26d7006d",
+   "id": "574a23a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90db6b1a",
+   "id": "9c54243a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b5e7a1b",
+   "id": "494331ef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2b20264",
+   "id": "bfc762b9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -737,7 +737,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -751,7 +751,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.12"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
