--- a/model_WFE_size/notebooks/wfe-study-multi-realisation-results.ipynb
+++ b/model_WFE_size/notebooks/wfe-study-multi-realisation-results.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3b1bf216",
+   "execution_count": 8,
+   "id": "6f4f9f78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6fde4bcf",
+   "execution_count": 9,
+   "id": "5ecdcd71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cfb08b63",
+   "execution_count": 10,
+   "id": "19bc8ad4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "56676cf5",
+   "execution_count": 11,
+   "id": "51aaba48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,8 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d6e8853c",
+   "execution_count": 19,
+   "id": "69dd9ed1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,8 +137,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "339dd54b",
+   "execution_count": 23,
+   "id": "ef739a94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "SR_data = np.load(saving_folder+'result_dict.npy',allow_pickle=True)[()]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f2158fc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5.42097046, 2.11293908, 2.10626005, 3.45872813, 3.28045238])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SR_data['model_128_rel_rmse']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2906deb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "SR_metrics = np.array([\n",
+    "    SR_data['model_064_rel_rmse'],\n",
+    "    SR_data['model_128_rel_rmse'],\n",
+    "    SR_data['model_256_rel_rmse'],\n",
+    "    SR_data['model_256_benchmark_rel_rmse']\n",
+    "])\n",
+    "\n",
+    "\n",
+    "SR_metrics_mean = np.mean(SR_metrics, axis=1)\n",
+    "SR_metrics_median = np.median(SR_metrics, axis=1)\n",
+    "SR_metrics_std = np.std(SR_metrics, axis=1)\n",
+    "SR_metrics_best = np.min(SR_metrics, axis=1)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f4f669c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5.66809588, 3.28045238, 4.67587151, 3.48876644])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SR_metrics_median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a58e0d6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5.76777529, 3.27587002, 4.65555055, 3.66830186])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SR_metrics_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4e158d1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,8 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "10ef758b",
+   "execution_count": 14,
+   "id": "a385b12c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,8 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "d61157b6",
+   "execution_count": 15,
+   "id": "dafbaa0e",
    "metadata": {
     "scrolled": true
    },
@@ -182,7 +283,7 @@
        "(5, 4)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,8 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "8801768a",
+   "execution_count": 16,
+   "id": "7bb023c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9759c932",
+   "id": "f072bc90",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -216,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "87a47422",
+   "id": "3d5b66a6",
    "metadata": {},
    "outputs": [
     {
@@ -261,8 +362,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "35583a8c",
+   "execution_count": 17,
+   "id": "59134ed8",
    "metadata": {
     "scrolled": false
    },
@@ -335,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d25fbfe9",
+   "id": "1de551f8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -343,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "12a3ccdc",
+   "id": "ed9f972f",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e44f8696",
+   "id": "08399a79",
    "metadata": {},
    "source": [
     "# Plots"
@@ -372,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f1cc6d7f",
+   "id": "d0e8f676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7fe0f85",
+   "id": "888df366",
    "metadata": {},
    "source": [
     "# Relative SR (res x3) pixel RMSE & Computing time vs WFE res"
@@ -390,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e4f8a9d9",
+   "id": "8ba970a5",
    "metadata": {},
    "outputs": [
     {
@@ -471,14 +572,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daa90bf6",
+   "id": "46fe05e2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "494aae34",
+   "id": "df22c22b",
    "metadata": {},
    "source": [
     "# Relative (res x1) pixel RMSE & Computing time vs WFE res"
@@ -487,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "24b9d48c",
+   "id": "c2d3dcab",
    "metadata": {},
    "outputs": [
     {
@@ -565,14 +666,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "330606d3",
+   "id": "62d49bf1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7a6fca35",
+   "id": "4cdd4dd7",
    "metadata": {},
    "source": [
     "# Compute error between datasets of different WFE res"
@@ -581,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "49677cc5",
+   "id": "5468410a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6874895a",
+   "id": "206de9f8",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +721,29 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b7b34703",
+   "id": "78aab98e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(400, 350, 2)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "test_4096['SEDs'].shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6ed629f5",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e1e0e3",
+   "id": "aeaf7a8f",
    "metadata": {},
    "source": [
     "## Pixel error x1 res"
@@ -676,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7ca17a5c",
+   "id": "80f6362c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "90c5368c",
+   "id": "b9897ea5",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72defe51",
+   "id": "fc1aefee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -736,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ca23237e",
+   "id": "330994bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0ef78abb",
+   "id": "d1242304",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f7747166",
+   "id": "66a59ab9",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8f020d5",
+   "id": "e9557d49",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -808,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0a349329",
+   "id": "0b4f0f78",
    "metadata": {
     "scrolled": true
    },
@@ -832,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "befdb2b4",
+   "id": "c51b5fc8",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "da804bab",
+   "id": "c745f872",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cbcd622f",
+   "id": "17efd432",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a319347",
+   "id": "c3d7540c",
    "metadata": {},
    "source": [
     "# Regenerate x3 res test stars"
@@ -959,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5513b939",
+   "id": "d2fd79c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f2b7ac7d",
+   "id": "871fce9f",
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d9c7d246",
+   "id": "5aad1ef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2af57e69",
+   "id": "09265349",
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "74b03799",
+   "id": "61ac1619",
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0bb5b011",
+   "id": "607dbbfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1231208",
+   "id": "4bdd1a7e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1128,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d5472ed1",
+   "id": "fe5c85aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f0ae2949",
+   "id": "aec895f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "599b8d89",
+   "id": "86e4f514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,8 +1308,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "03cb33e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_SEDs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-0ac480d2188d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_SEDs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'test_SEDs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "test_SEDs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
-   "id": "469243e8",
+   "id": "6e108ef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db8d894c",
+   "id": "c1598f54",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1214,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7f5ac2d",
+   "id": "8b6cb0e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3782ba7e",
+   "id": "43ac48bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "cb7468c4",
+   "id": "b5b50b76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6fbac2e5",
+   "id": "c310aebc",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed0e4af7",
+   "id": "b63ec23a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1295,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b466146c",
+   "id": "02181504",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1303,7 +1448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99b33575",
+   "id": "33855d41",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1311,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc970634",
+   "id": "0b4632b3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1319,7 +1464,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1333,7 +1478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.12"
   },
   "varInspector": {
    "cols": {
